More security fixes for applets, specifically to allow IRB to run again. For JRUBY-1762, from Vladimir.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@5329 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/samples/applet.html
+++ b/samples/applet.html
@@ -1,2 +1,6 @@
-<applet archive="jruby-complete.jar" code="org.jruby.JRubyApplet.class" width="500" height="300">
+<applet
+  code="org.jruby.demo.IRBApplet.class"
+  codebase="../lib/"
+  archive="jruby-complete.jar"
+  width="500" height="500">
 </applet>
